<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"

    android:orientation="vertical">


    <Button
        android:id="@+id/btn_login"
        style="?attr/roundSkyBlueButtonColorStyle"
        android:text="@string/login"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_signup"
        style="?attr/roundSkyBlueButtonColorStyle"
        android:text="@string/signup"
        android:visibility="invisible" />


    <EditText
        android:id="@+id/et_user_name"
        style="?attr/roundEditTextNormalColorStyle"
        android:hint="@string/user_name_here"
        android:text=""
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_password"
        style="?attr/roundEditTextNormalColorStyle"
        android:drawableStart="@drawable/ic_key"
        android:hint="@string/password_here"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:text=""
        android:visibility="invisible" />


</LinearLayout>

