<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llBottomBarLayout"
    style="?attr/homeNormalBottomTabBgColorStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvAlert"
        style="?attr/homeNormalBottomTabTextStyle"

        android:drawableTop="@drawable/ic_alert"
        android:text="@string/alerts" />


    <TextView
        android:id="@+id/tvDashboard"
        style="?attr/homeNormalBottomTabTextStyle"

        android:drawableTop="@drawable/ic_dashboard"
        android:text="@string/dashboard" />

    <TextView
        android:id="@+id/tvLiveChat"
        style="?attr/homeNormalBottomTabTextStyle"

        android:drawableTop="@drawable/ic_live_chat"
        android:text="@string/live_chat" />

    <TextView
        android:id="@+id/tvFavourites"
        style="?attr/homeNormalBottomTabTextStyle"

        android:drawableTop="@drawable/ic_favourite"
        android:text="@string/favourites" />


</LinearLayout>