<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_item1"
        android:title="">
        <menu>
          <!--  <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>
-->
           <!-- <item
                android:id="@+id/nav_biz_links"
                android:title="@string/my_bizlinks"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>
-->
            <item
                app:actionViewClass="android.widget.TextView"
                android:id="@+id/nav_customers"
                android:title="@string/customer"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>

            <item
                app:actionViewClass="android.widget.TextView"
                android:id="@+id/nav_supplier"
                android:title="@string/supplier"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>


   <item
                app:actionViewClass="android.widget.TextView"
                android:id="@+id/nav_product"
                android:title="Product"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>


        </menu>
    </item>

    <item
        android:id="@+id/nav_item2"
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>
        </menu>
    </item>
</menu>
