<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/supportCenterInfoBgStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/support_center_info_bg"
        android:elevation="@dimen/x10"
        android:orientation="vertical">

        <TextView
            style="?attr/allPageCardHeaderStyle"
            android:text="@string/document_requested" />

        <LinearLayout
            style="?attr/allPageCardHeaderStyle"
            android:layout_marginTop="@dimen/x2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"

                style="@style/header_text_color_size"
                android:gravity="center"


                android:text="@string/s_no"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.90"
                style="@style/header_text_color_size"
                android:text="@string/document_description"/>

        </LinearLayout>



        <!-- Table For Document  -->
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/x15"
            android:paddingBottom="@dimen/x15">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvDocument"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>


</FrameLayout>
