<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/supportCenterInfoBgStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/support_center_info_bg"
        android:elevation="@dimen/x10"
        android:orientation="vertical">

        <LinearLayout
            style="?attr/allPageCardHeaderStyle"
            android:layout_marginTop="@dimen/x2"
            android:orientation="horizontal">

            <TextView
                style="?attr/allPageCardHeaderStyle"
                android:padding="@dimen/x0"
                android:text="@string/select_document" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="@dimen/x15"
            android:paddingBottom="@dimen/x15">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/x7">

                <FrameLayout
                    android:id="@+id/flDocumentBrowseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.30"

                    android:gravity="center">

                    <Button
                        android:id="@+id/btnDocumentBrowseButton"
                        style="?attr/customerComplainButtonStyle"
                        android:padding="@dimen/x3"
                        android:text="@string/browse" />


                </FrameLayout>


                <TextView
                    android:id="@+id/tvDocumentUploadName"
                    style="?attr/documentRequestTableInfoTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/x10"
                    android:layout_weight="0.50"
                    android:background="@drawable/edittext_borderline"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/x2"
                    android:text="Document.pdf"
                    android:textColor="@color/customer_support_center_seperater_color" />


                <TextView
                    style="?attr/documentRequestTableInfoTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.40"
                    android:text="@string/locate_cocument" />

            </LinearLayout>


        </LinearLayout>


        <TextView
            style="?attr/allPageCardHeaderStyle"
            android:text="@string/document_requested" />


    </LinearLayout>


</FrameLayout>
